# mad-world

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  Makefile  README.md  TODO.md  comments.json  patch.diff  patch2.diff  patch_TODO.md  plan_draft.md  pyproject.toml  sgconfig.yml  test_circular.py
.github/: dependabot.yml
.github/workflows/: check.yml
.sg-rules/: base-card-missing-card-kind.yml  never-nest.yaml
src/mad_world/: __init__.py  __main__.py  actions.py  cards.py  config.py  core.py  crises.py  decks.py  effects.py  enums.py  event_cards.py  event_queries.py  event_stream.py  events.py  hooks.py  human_player.py  llm_chat.py  llm_player.py  log_summarizer.py  mandates.py  model_defaults.json  ollama_chat.py  ollama_player.py  personas.py  players.py  rng.py  rules.py  trivial_players.py  util.py
src/mad_world/tui/: __init__.py  __main__.py  app.py  widgets.py
tests/: __init__.py  conftest.py  test_active_effects.py  test_ai_arms_race.py  test_bilateral_disarmament.py  test_blame_game.py  test_cards.py  test_config.py  test_core.py  test_crises.py  test_decks.py  test_doomsday_asteroid.py  test_effects.py  test_event_cards.py  test_event_log_query.py  test_event_queries.py  test_event_stream.py  test_events.py  test_game_manager.py  test_garbled_message.py  test_human_player.py  test_llm_chat.py  test_llm_player.py  test_log_summarizer.py  test_main.py  test_mandates.py  test_nuclear_meltdown.py  test_ollama_chat.py  test_ollama_player.py  test_personas.py  test_reproducibility.py  test_rng.py  test_rules.py  test_serdes.py  test_trivial_players.py  test_trivial_players_constraints.py  test_tui_app.py  test_tui_main.py  test_tui_widgets.py  test_util.py  (+1 more)
