[project]
name = "mad-world"
version = "0.1.0"
description = "A small computer strategy game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "ollama>=0.6.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mad_world"]

[tool.ruff]
line-length = 80
target-version = "py312"
output-format = "concise"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mad_world --cov-report=term-missing:skip-covered --cov-fail-under=51"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
	"src/mad_world/ollama_chat.py"
]

[tool.coverage.report]
precision = 2
